--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
       "after:release": "echo Successfully released ${name} v${version} to ${repo.repository}."
     }
   },
-  "dependencies": {},
+  "dependencies": {
+    "release-it": "^14.2.2"
+  },
   "devDependencies": {}
 }
