--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/filiprak/js-runtime-types.git"
   },
   "scripts": {
-    "dev": "webpack-dev-server --mode development --config webpack.dev.js",
+    "dev": "webpack serve --mode development --config webpack.dev.js",
     "build": "webpack --mode production --config webpack.prod.js",
     "test": "jest",
     "release": "release-it",
@@ -47,7 +47,16 @@
     }
   },
   "dependencies": {
-    "release-it": "^14.2.2"
+    "lodash.clonedeep": "^4.5.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "babel-loader": "^8.1.0",
+    "html-webpack-plugin": "^4.5.0",
+    "release-it": "^14.2.2",
+    "webpack": "^5.17.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^3.11.0"
+  }
 }
