--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     }
   },
   "dependencies": {
-    "lodash.clonedeep": "^4.5.0"
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.isarray": "^4.0.0",
+    "lodash.isfunction": "^3.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
